# sophros

./: .gitattributes  .gitignore  README.md  renovate.json
.github/ISSUE_TEMPLATE/: defect-issue.md  enhancement.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  generate-client.yml  generate-sbom.yml  sbom.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_log.txt  pyproject.toml  railway.json  requirements.txt  ruff_errors.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 023eaa79cde6_update_for_evan.py  17ccd3f5651f_merge_heads.py  1f955c767c7e_dietary_stuff.py  35fb1c317be3_add_pregnancy_status_to_user_table.py  3dd430e1a7c2_add_schedule_item_table.py  500d7ca07f8b_make_google_calendar_last_synced_at_.py  51db8ff87aba_initial_migration.py  6ea868ba6f73_refactored_meal_to_be_under_a_schedule_.py  7314ef4e6209_add_schedules_table.py  89987c2b6f2a_refactor_goals_to_separate_table.py  8e3bf73c2c0b_introduce_google_calendar_schema.py  a1b2c3d4e5f6_add_busy_times_to_user.py  a2b3c4d5e6f7_add_google_calendar_connections.py  a2b3c4d5e6f7_remove_body_fat_and_maintain_mode.py  a6d24070f720_add_exercisecategory_to_scheduleitem.py  a8aa6cc580d3_fix_target_date_column_type.py  b1c2d3e4f5a6_add_meal_type_to_schedules.py  b3c4d5e6f7a8_add_schedule_source_metadata.py  c2be6da47bc6_create_user_table.py  d2efffbda75e_add_saved_meal_plans.py  db1bc88ad384_add_remaining_exercise_notes_to_db.py  e1f2g3h4i5j6_add_planned_events_tables.py  e9f3a2b1c4d5_add_progress_tables_and_goal_snapshot.py  f03efbe9a54f_add_custom_meal_fields.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: google_calendar.py  login_streaks.py  meal_plans.py  progress.py  schedules.py  users.py
backend/app/core/: config.py
backend/app/db/: base_class.py  session.py
backend/app/domain/: enums.py
backend/app/models/: __init__.py  dietary.py  goal.py  google_calendar.py  login_record.py  meal.py  planned_event.py  progress.py  saved_meal_plan.py  schedule.py  user.py
backend/app/schemas/: dietary.py  goal.py  google_calendar.py  login_streak.py  meal.py  meal_plan.py  nutrient.py  progress.py  recipe.py  schedule.py  user.py
backend/app/services/: clerk_oauth.py  exercise_service.py  google_calendar.py  meal_allocator.py  meal_classifier.py  meal_optimizer.py  meal_plan.py  meal_plan_crud.py  nutrient_calculator.py  recipe_filter.py  spoonacular.py
backend/tests/: conftest.py  factories.py  generate_mock_user.py  manual_test_meal_plan.py  test_auth.py  test_google_calendar.py  test_google_calendar_api.py  test_main.py  test_meal_allocator.py  test_meal_classifier.py  test_meal_optimizer.py  test_meal_plan.py  test_meal_plans_api.py  test_nutrient_calculator.py  test_recipe_filter.py  test_schedules.py  test_spoonacular.py  test_users.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DesignDocument.md  SBOM.json  SDP.md  SDP_AMENDMENTS.md  Verification&Validation.md  clerk.md  database.dbml  how-to-deploy.md  how-to.md  reference.md  services.md  testing.md  tutorial.md
docs/testing/: 02.07.26_clerk_test.md  03.07.26_meal_test.md  03.11.26_version_identifier.md  03.15.26_UAT1_0.md  03.15.26_railway_deployment.md  03.18.26_spoonacular_test.md  04.26.26_UAT2_0.md  04.26.26_achievements_test.md  04.26.26_progress_chart_test  04.26.26_progress_chart_test.md  README.md  VerificationTestInventory.md  manualtemplate.md  testdoc1.md  uattemplate.md
frontend/: .env  .env.example  .gitignore  .prettierignore  app.config.ts  app.json  eas.json  eslint.config.js  jest.config.js  jest.setup.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml
frontend/__tests__/: test-utils.tsx
frontend/android/: settings.gradle
frontend/api/: helpers.ts  index.ts  sdk.gen.ts  types.gen.ts  userQueries.ts
frontend/app/: _layout.tsx  health-score.tsx  index.tsx  log-today.tsx  week-planning.tsx  welcome.tsx
frontend/components/: AlternativesModal.tsx  BodyFatLogForm.tsx  ChipSelect.tsx  DailyCheckinPrompt.tsx  DatePickerInput.tsx  DurationPickerInput.tsx  EditItemModal.tsx  LogEntryModal.tsx  MacroNutrients.tsx  MealDetailModal.tsx  MetricInput.tsx  MissedItemModal.tsx  OAuthButton.tsx  ProfileSection.tsx  ProgressCard.tsx  ScheduleItemCard.tsx  SelectionCard.tsx  TimePicker.tsx  (+6 more)
scripts/: generate-client.sh
(+116 files in other folders)
