[project]
name = "sophros-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0,<1.0.0",
    "fastapi[standard]>=0.115.12,<1.0.0",
    "httpx>=0.27.2,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "openai>=1.51.2,<2.0.0",
    "ortools>=9.11.4210,<10.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "pydantic-settings>=2.5.2,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "uvicorn[standard]>=0.31.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = ["B008"] # Do not perform function call `Depends` in argument defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
