[project]
name = "sophros-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0,<1.0.0",
    "fastapi[standard]>=0.129.0,<1.0.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1,<1.0.0",
    "mypy>=1.19.1,<2.0.0",
    "openai>=2.21.0,<2.21.1",
    "ortools>=9.15.6755,<10.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "sqlalchemy>=2.0.46,<3.0.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.2,<9.0.3",
    "pytest-asyncio>=1.3.0,<1.3.1",
    "ruff>=0.15.1,<1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = ["B008"] # Do not perform function call `Depends` in argument defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
